--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "^13.1.1",
@@ -20,7 +19,7 @@
     "framer-motion": "^8.5.5",
     "mlab-speed-test": "^1.0.0",
     "next": "13.1.1",
-    "next-sitemap": "^4.0.7",
+    "next-sitemap": "^4.1.8",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
