--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "generate-sitemap": "next-sitemap"
   },
   "dependencies": {
     "@next/font": "^13.1.1",
@@ -15,6 +15,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "aws-sdk": "^2.1350.0",
+    "axios": "^1.5.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.5.5",
