--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-sitemap": "next-sitemap"
+    "generate": "next-sitemap",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@next/font": "^13.1.1",
@@ -15,7 +16,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "aws-sdk": "^2.1350.0",
-    "axios": "^1.5.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.5.5",
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-helmet": "^6.1.0",
     "resize-observer-polyfill": "^1.5.1",
     "swiper": "^8.4.5",
     "typescript": "4.9.4"
