blogs are added through serverside

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_BACKEND_URL = https://backend-yip.cyclic.app/
-BACKEND_URL = https://backend-yip.cyclic.app/
+BACKEND_URL = https://yip-five.vercel.app/
 WEBSITE_URL = https://www.yourinternetprovider.com/
-NEXT_PUBLIC_SECOND_IMAGES_URL = https://www.yourinternetprovider.com/
+NEXT_PUBLIC_SECOND_IMAGES_URL = https://yip-five.vercel.app/
 NEXT_PUBLIC_IMAGES_URL = https://next.thepic.store/frontend/
 REGENERATION_TOKEN = leilaniTech
 
